Always use thin scrollbars to prevent flickering in Chrome - Fixes #327

--- a/packages/scrabble-solver/src/styles/mixins.scss
+++ b/packages/scrabble-solver/src/styles/mixins.scss
@@ -14,7 +14,7 @@ $media-expressions: (
 
 @mixin scrollbars {
   scrollbar-color: var(--scrollbar--thumb--color) var(--scrollbar--thumb--track);
-  scrollbar-width: auto;
+  scrollbar-width: thin;
 
   &::-webkit-scrollbar {
     width: var(--scrollbar--size);
